--- a/ADC_reader/ADC_reader.ioc
+++ b/ADC_reader/ADC_reader.ioc
@@ -7,6 +7,35 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.CommonPathInternal=null|null|null|null
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.CommonPathInternal=null|null|null|null
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.master=1
+ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC4.CommonPathInternal=null|null|null|null
+ADC4.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC4.NbrOfConversionFlag=1
+ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC4.Rank-0\#ChannelRegularConversion=1
+ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC5.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC5.CommonPathInternal=null|null|null|null
+ADC5.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC5.NbrOfConversionFlag=1
+ADC5.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC5.Rank-0\#ChannelRegularConversion=1
+ADC5.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 BSP_IP_NAME=NUCLEO-G474RE
 CAD.formats=
 CAD.pinconfig=
@@ -38,30 +67,38 @@ LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=LPUART1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=NUCLEO-G474RE
-Mcu.IPNb=7
+Mcu.IP1=ADC2
+Mcu.IP10=NUCLEO-G474RE
+Mcu.IP2=ADC3
+Mcu.IP3=ADC4
+Mcu.IP4=ADC5
+Mcu.IP5=DMA
+Mcu.IP6=LPUART1
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=VP_SYS_VS_tim2
-Mcu.Pin13=VP_SYS_VS_DBSignals
+Mcu.Pin10=PB1
+Mcu.Pin11=PB12
+Mcu.Pin12=PA8
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=VP_SYS_VS_tim2
+Mcu.Pin17=VP_SYS_VS_DBSignals
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -85,6 +122,8 @@ NVIC.TimeBaseIP=TIM2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
+PA1.Mode=IN2-Single-Ended
+PA1.Signal=ADC2_IN2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
 PA13.Locked=true
@@ -109,6 +148,12 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [green led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA8.Mode=IN1-Single-Ended
+PA8.Signal=ADC5_IN1
+PB1.Mode=IN1-Single-Ended
+PB1.Signal=ADC3_IN1
+PB12.Mode=IN3-Single-Ended
+PB12.Signal=ADC4_IN3
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -136,7 +181,7 @@ ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:\\Users\\User\\STM32Cube\\Repository\\STM32Cube_FW_G4_V1.5.0
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\Users\\ioonz\\STM32Cube\\Repository\\STM32Cube_FW_G4_V1.6.1
 ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G474RETx
@@ -161,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-false,2-MX_DMA_Init-DMA-false-LL-false,3-SystemClock_Config-RCC-false-LL-false,4-MX_LPUART1_UART_Init-LPUART1-false-LL-false,5-MX_ADC1_Init-ADC1-false-LL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-false,2-MX_DMA_Init-DMA-false-LL-false,3-SystemClock_Config-RCC-false-LL-false,4-MX_LPUART1_UART_Init-LPUART1-false-LL-false,5-MX_ADC1_Init-ADC1-false-LL-false,6-MX_ADC2_Init-ADC2-false-LL-false,7-MX_ADC3_Init-ADC3-false-LL-false,8-MX_ADC4_Init-ADC4-false-LL-false,9-MX_ADC5_Init-ADC5-false-LL-false
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
