--- a/Encoder_reader/Encoder_reader.ioc
+++ b/Encoder_reader/Encoder_reader.ioc
@@ -48,8 +48,8 @@ Mcu.Pin2=PF0-OSC_IN
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
+Mcu.Pin6=PA4
+Mcu.Pin7=PA6
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
 Mcu.PinsNb=13
@@ -93,9 +93,9 @@ PA3.GPIO_Label=LPUART1_RX [STLINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
+PA4.Locked=true
+PA4.Signal=S_TIM3_CH2
 PA6.Signal=S_TIM3_CH1
-PA7.Locked=true
-PA7.Signal=S_TIM3_CH2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -119,8 +119,8 @@ ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:\\Users\\User\\STM32Cube\\Repository\\STM32Cube_FW_G4_V1.5.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G474RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_G4 V1.6.1
